Fixed the alignment issues

--- a/reactive-frontend/src/client/app/styles.css
+++ b/reactive-frontend/src/client/app/styles.css
@@ -18,6 +18,7 @@ body
 		background-repeat: no-repeat;
 		background-size: cover;
 		z-index: -1;
+		overflow-y: hidden;
 		/*background-image: radial-gradient(rgba(0,0,0,.2), rgba(1,0,0, 1)), url(https://s3-us-west-1.amazonaws.com/scavengers-repo.com/images/WinterMoodBoard/gHQr2Tr.jpg);*/
 	}
 #overlay1 {
@@ -27,6 +28,7 @@ body
 			background-repeat: no-repeat;
 			background-size: cover;
 			z-index: -1;
+			overflow-y: hidden;
 			/*background-image: radial-gradient(rgba(0,0,0,.2), rgba(1,0,0, 1)), url(https://s3-us-west-1.amazonaws.com/scavengers-repo.com/images/AutumnMoodBoard/960.jpg);*/
 		}
 
@@ -38,15 +40,18 @@ body
 }
 
 #contentContainer {
-	max-height: 1000px;
+	max-height: 50vh;
 	overflow-y: scroll;
 	background-color: rgba(0, 0, 0, 0.7);
 	color: rgba(255,255,255,.8);
 	margin-left: 5vw;
 	margin-top: 30px;
+	margin-right: 5vw;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-bottom: 5%;
+	float:right;
+
 
 }
 
@@ -93,7 +98,9 @@ button{
 .sideMenu{
 	text-align: right;
 	color: white;
-	margin-top: 15px;
+	margin-top: 15vw;
+  position: absolute;
+
    /*vertical-align:middle;*/
 
 
